# Tanki2D_Project_TP

./: README.md  init.sh
client/: CMakeLists.txt  client.cpp  init.sh  init.txt  launchingh_client.sh  map.h  message.pb.cc  message.pb.h  message.proto  sfml-app  sfml_test.cpp
server/: CMakeLists.txt  assembling_server.sh  launching_server.sh  server.cpp
