PROJECT(server)
CMAKE_MINIMUM_REQUIRED (VERSION 3.5)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SET(CMAKE_CXX_FLAGS "-g -O2 -std=c++11")
ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} server.cpp)

INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)

INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
INCLUDE_DIRECTORIES("../client/")

PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ../client/message.proto)
ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})

SET(CMAKE_MODULE_PATH  "/usr/share/SFML/cmake/Modules")
FIND_PACKAGE(SFML 2 REQUIRED graphics window system network)

if(SFML_FOUND)
  INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
  TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${SFML_LIBRARIES} proto ${PROTOBUF_LIBRARY})
endif()

